--- a/molcal10arabic.html
+++ b/molcal10arabic.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Molar Calculator</title>
+    <title>حاسبة مولارية</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             max-width: 700px;
             margin: 20px auto;
             padding: 20px;
+            direction: rtl;
         }
         .calculator {
             background-color: #f5f5f5;
@@ -28,7 +29,7 @@
         input, select {
             padding: 8px;
             width: 200px;
-            margin-right: 10px;
+            margin-left: 10px;
         }
         button {
             padding: 10px 20px;
@@ -59,23 +60,23 @@
 </head>
 <body>
     <div class="calculator">
-        <h2 data-translate="title">Molar Calculator</h2>
+        <h2 data-translate="title">حاسبة مولارية</h2>
         <div class="input-group">
-            <label for="value" data-translate="enterValue">Enter Value:</label>
-            <input type="number" id="value" step="any" min="0" placeholder="Enter value">
+            <label for="value" data-translate="enterValue">أدخل القيمة:</label>
+            <input type="number" id="value" step="any" min="0" placeholder="أدخل القيمة">
         </div>
         <div class="input-group">
-            <label for="unit" data-translate="selectUnit">Select Unit:</label>
+            <label for="unit" data-translate="selectUnit">اختر الوحدة:</label>
             <select id="unit">
-                <option value="mol">mol (moles)</option>
-                <option value="mmol">mmol (millimoles)</option>
-                <option value="umol">µmol (micromoles)</option>
-                <option value="nmol">nmol (nanomoles)</option>
+                <option value="mol">مول</option>
+                <option value="mmol">مليمول</option>
+                <option value="umol">ميكرومول</option>
+                <option value="nmol">نانومول</option>
             </select>
         </div>
-        <button onclick="calculate()" data-translate="calculate">Calculate</button>
+        <button onclick="calculate()" data-translate="calculate">احسب</button>
         <div id="results">
-            <h3 data-translate="results">Results:</h3>
+            <h3 data-translate="results">النتائج:</h3>
             <div id="mol-result" class="result-item" data-translate="mol"></div>
             <div id="mmol-result" class="result-item" data-translate="mmol"></div>
             <div id="umol-result" class="result-item" data-translate="umol"></div>
@@ -168,7 +169,7 @@
             }
         };
 
-        let currentLanguage = 'en';
+        let currentLanguage = 'ar';
         let lastResults = null;
 
         function calculate() {
@@ -177,11 +178,11 @@
             const resultsDiv = document.getElementById('results');
 
             if (isNaN(value) || value < 0) {
-                alert('Please enter a valid positive number');
+                alert('من فضلك أدخل رقم صالح وإيجابي');
                 return;
             }
 
-            // Convert input to moles first
+            // تحويل القيمة إلى المولات أولاً
             let moles;
             switch(unit) {
                 case 'mol':
@@ -198,7 +199,7 @@
                     break;
             }
 
-            // Calculate all units including particles using Avogadro's number
+            // حساب جميع الوحدات، بما في ذلك الجسيمات باستخدام عدد أفوجادرو
             const AVOGADRO = 6.02214076e23;
             const mol = moles;
             const mmol = moles * 1000;
@@ -206,10 +207,10 @@
             const nmol = moles * 1000000000;
             const particles = moles * AVOGADRO;
 
-            // Store results
+            // تخزين النتائج
             lastResults = { mol, mmol, umol, nmol, particles };
 
-            // Display results
+            // عرض النتائج
             displayResults();
             resultsDiv.style.display = 'block';
         }
@@ -226,18 +227,18 @@
             document.getElementById('nmol-result').textContent = 
                 `${translations[currentLanguage].nmol}${lastResults.nmol.toFixed(6)}`;
             document.getElementById('particles-result').textContent = 
-                `${translations[currentLanguage].particles}${lastResults.particles.toExponential(6)} (using Avogadro's number)`;
+                `${translations[currentLanguage].particles}${lastResults.particles.toExponential(6)} (باستخدام عدد أفوجادرو)`;
         }
 
         function translate(language) {
             currentLanguage = language;
             
-            // Update all translatable elements
+            // تحديث جميع العناصر القابلة للترجمة
             document.querySelectorAll('[data-translate]').forEach(element => {
                 const key = element.getAttribute('data-translate');
                 if (key in translations[language]) {
                     if (element.tagName === 'DIV' && lastResults) {
-                        // For result items, only update the label part
+                        // لتحديث العناصر التي تحتوي على النتائج فقط
                         element.textContent = translations[language][key];
                     } else {
                         element.textContent = translations[language][key];
@@ -245,17 +246,17 @@
                 }
             });
 
-            // Update direction for Arabic
+            // تحديث الاتجاه للغة العربية
             document.body.style.direction = language === 'ar' ? 'rtl' : 'ltr';
 
-            // Refresh displayed results if they exist
+            // تحديث النتائج المعروضة، إذا كانت موجودة
             displayResults();
         }
 
         function redirectToPage(language) {
             let pageUrl = '';
 
-            // Determine the page URL based on the selected language
+            // تحديد عنوان الصفحة بناءً على اللغة المختارة
             switch(language) {
                  case 'en':
                     pageUrl = '/home/thainara/Documents/molcalc10/molcal10.html';
@@ -273,18 +274,18 @@
                     pageUrl = '/home/thainara/Documents/molcalc10/molcal10arabic.html';
                     break;
                 case 'zh':
-                    pageUrl = '/home/thainara/Documents/molcalc10/molcal10chinese.html';
+                    pageUrl = '/home/thainara/Documents/molcalc10/molcalc10chinese.html';
                     break;
                 default:
                     pageUrl = '/molcalc10/molcal10.html';
             }
 
-            // Redirect to the corresponding page
+            // التوجيه إلى الصفحة المحددة
             window.location.href = pageUrl;
         }
 
-        // Set default language to English
-        translate('en');
+        // تعيين اللغة الافتراضية إلى العربية
+        translate('ar');
     </script>
 </body>
 </html>
