--- a/molcal10pt.html
+++ b/molcal10pt.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Molar Calculator</title>
+    <title>Calculadora Molar</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,23 +59,23 @@
 </head>
 <body>
     <div class="calculator">
-        <h2 data-translate="title">Molar Calculator</h2>
+        <h2 data-translate="title">Calculadora Molar</h2>
         <div class="input-group">
-            <label for="value" data-translate="enterValue">Enter Value:</label>
-            <input type="number" id="value" step="any" min="0" placeholder="Enter value">
+            <label for="value" data-translate="enterValue">Digite o Valor:</label>
+            <input type="number" id="value" step="any" min="0" placeholder="Digite o valor">
         </div>
         <div class="input-group">
-            <label for="unit" data-translate="selectUnit">Select Unit:</label>
+            <label for="unit" data-translate="selectUnit">Selecione a Unidade:</label>
             <select id="unit">
                 <option value="mol">mol (moles)</option>
-                <option value="mmol">mmol (millimoles)</option>
+                <option value="mmol">mmol (milimoles)</option>
                 <option value="umol">µmol (micromoles)</option>
                 <option value="nmol">nmol (nanomoles)</option>
             </select>
         </div>
-        <button onclick="calculate()" data-translate="calculate">Calculate</button>
+        <button onclick="calculate()" data-translate="calculate">Calcular</button>
         <div id="results">
-            <h3 data-translate="results">Results:</h3>
+            <h3 data-translate="results">Resultados:</h3>
             <div id="mol-result" class="result-item" data-translate="mol"></div>
             <div id="mmol-result" class="result-item" data-translate="mmol"></div>
             <div id="umol-result" class="result-item" data-translate="umol"></div>
@@ -168,7 +168,7 @@
             }
         };
 
-        let currentLanguage = 'en';
+        let currentLanguage = 'pt';
         let lastResults = null;
 
         function calculate() {
@@ -177,11 +177,11 @@
             const resultsDiv = document.getElementById('results');
 
             if (isNaN(value) || value < 0) {
-                alert('Please enter a valid positive number');
+                alert('Por favor, digite um número válido e positivo');
                 return;
             }
 
-            // Convert input to moles first
+            // Converter valor para mols primeiro
             let moles;
             switch(unit) {
                 case 'mol':
@@ -198,7 +198,7 @@
                     break;
             }
 
-            // Calculate all units including particles using Avogadro's number
+            // Calcular todas as unidades, incluindo partículas usando o número de Avogadro
             const AVOGADRO = 6.02214076e23;
             const mol = moles;
             const mmol = moles * 1000;
@@ -206,10 +206,10 @@
             const nmol = moles * 1000000000;
             const particles = moles * AVOGADRO;
 
-            // Store results
+            // Armazenar resultados
             lastResults = { mol, mmol, umol, nmol, particles };
 
-            // Display results
+            // Exibir resultados
             displayResults();
             resultsDiv.style.display = 'block';
         }
@@ -226,18 +226,18 @@
             document.getElementById('nmol-result').textContent = 
                 `${translations[currentLanguage].nmol}${lastResults.nmol.toFixed(6)}`;
             document.getElementById('particles-result').textContent = 
-                `${translations[currentLanguage].particles}${lastResults.particles.toExponential(6)} (using Avogadro's number)`;
+                `${translations[currentLanguage].particles}${lastResults.particles.toExponential(6)} (usando o número de Avogadro)`;
         }
 
         function translate(language) {
             currentLanguage = language;
             
-            // Update all translatable elements
+            // Atualizar todos os elementos traduzíveis
             document.querySelectorAll('[data-translate]').forEach(element => {
                 const key = element.getAttribute('data-translate');
                 if (key in translations[language]) {
                     if (element.tagName === 'DIV' && lastResults) {
-                        // For result items, only update the label part
+                        // Para itens de resultados, atualize apenas a parte do rótulo
                         element.textContent = translations[language][key];
                     } else {
                         element.textContent = translations[language][key];
@@ -245,17 +245,17 @@
                 }
             });
 
-            // Update direction for Arabic
+            // Atualizar a direção para o árabe
             document.body.style.direction = language === 'ar' ? 'rtl' : 'ltr';
 
-            // Refresh displayed results if they exist
+            // Atualizar resultados exibidos, se existirem
             displayResults();
         }
 
         function redirectToPage(language) {
             let pageUrl = '';
 
-            // Determine the page URL based on the selected language
+            // Determinar a URL da página com base no idioma selecionado
             switch(language) {
                  case 'en':
                     pageUrl = '/home/thainara/Documents/molcalc10/molcal10.html';
@@ -273,18 +273,18 @@
                     pageUrl = '/home/thainara/Documents/molcalc10/molcal10arabic.html';
                     break;
                 case 'zh':
-                    pageUrl = '/home/thainara/Documents/molcalc10/molcal10chinese.html';
+                    pageUrl = '/home/thainara/Documents/molcalc10/molcalc10chinese.html';
                     break;
                 default:
                     pageUrl = '/molcalc10/molcal10.html';
             }
 
-            // Redirect to the corresponding page
+            // Redirecionar para a página correspondente
             window.location.href = pageUrl;
         }
 
-        // Set default language to English
-        translate('en');
+        // Definir idioma padrão para português
+        translate('pt');
     </script>
 </body>
 </html>
