--- a/molcalc10chinese.html
+++ b/molcalc10chinese.html
@@ -258,22 +258,22 @@
             // 根据选择的语言确定页面地址
             switch(language) {
                  case 'en':
-                    pageUrl = '/home/thainara/Documents/molcalc10/molcal10.html';
+                    pageUrl = '/molcalc10/molcal10.html';
                     break;
                 case 'es':
-                    pageUrl = '/home/thainara/Documents/molcalc10/molcalc10spanish.html';
+                    pageUrl = '/molcalc10/molcalc10spanish.html';
                     break;
                 case 'de':
-                    pageUrl = '/home/thainara/Documents/molcalc10/molcal10german.html';
+                    pageUrl = '/molcalc10/molcal10german.html';
                     break;
                 case 'pt':
-                    pageUrl = '/home/thainara/Documents/molcalc10/molcal10pt.html';
+                    pageUrl = '/molcalc10/molcal10pt.html';
                     break;
                 case 'ar':
-                    pageUrl = '/home/thainara/Documents/molcalc10/molcal10arabic.html';
+                    pageUrl = '/molcalc10/molcal10arabic.html';
                     break;
                 case 'zh':
-                    pageUrl = '/home/thainara/Documents/molcalc10/molcalc10chinese.html';
+                    pageUrl = '/molcalc10/molcal10chinese.html';
                     break;
                 default:
                     pageUrl = '/molcalc10/molcal10.html';
